--- a/.github/workflows/ros_ci.yml
+++ b/.github/workflows/ros_ci.yml
@@ -63,7 +63,7 @@ jobs:
         run: |
           . /opt/ros/${{ matrix.rosdistro }}/setup.sh &&
           colcon test && 
-          colcon test-result
+          colcon test-result --verbose
         continue-on-error: true
 
       - name: run_test command success
