--- a/.github/workflows/ros_ci.yml
+++ b/.github/workflows/ros_ci.yml
@@ -6,10 +6,10 @@ on:
   pull_request:
     branches: [ main ]
   workflow_dispatch:
-  schedule:
-    - cron: '0 0 * * *'
-  release:
-    types: [published]
+  # schedule:
+  #   - cron: '0 0 * * *'
+  # release:
+  #   types: [published]
 
 jobs:
   build_and_test:
